# my-comfy-wan

./: .dockerignore  .gitignore  BUILD.bazel  Dockerfile  Dockerfile.test  LICENSE  MODULE.bazel  README.md  RUNPOD_BUILD_GUIDE.md  WORKSPACE  build-on-runpod.sh  run-bazel-build.sh  runpod.yaml  setup-bazel-build.sh  setup-interactive.sh  setup-runpod-bazel.sh  start.sh
.github/workflows/: docker-build.yml
docs/: COMPLETE_GUIDE.md  DOCKER_BUILD_GUIDE.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md
scripts/: download_models.sh
