# ComfyUI WAN RunPod Template - Bazel Module Configuration (Bzlmod)

module(
    name = "comfyui_wan_runpod",
    version = "2.1.0",
)

# Bazel dependencies for OCI image building
bazel_dep(name = "rules_oci", version = "1.7.5")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_python", version = "0.31.0")

# Python configuration for root user compatibility
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11",
    is_default = True,
    ignore_root_user_error = True,
)

# OCI image pulls
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# Pull CUDA base image (tagのみ使用)
oci.pull(
    name = "cuda_base",
    image = "index.docker.io/nvidia/cuda:12.3.2-devel-ubuntu22.04",
    platforms = ["linux/amd64"],
)

use_repo(oci, "cuda_base")